# Neuro-Karaoke-Song-Adder

./: .gitignore  CF_Program.py  LICENSE  README.md  Song_Adder.py  color_config.json  data_verification.py  pyproject.toml  remuxer.py  test_data_verification.py
.github/workflows/: build_program.yml
src/: CF_Program.py  data_verification.py  engraver.py  hash_mutagen.py
src/song_adder/: Song_Adder.py  __main__.py  remuxer.py
tests/: test_data_verification.py
